Rework bool concept

--- a/concepts/booleans/.meta/config.json
+++ b/concepts/booleans/.meta/config.json
@@ -2,6 +2,7 @@
   "blurb": "Booleans are either true or false. They support NOT, AND, and OR operators.",
   "authors": [
     "ErikSchierboom",
-    "pwadsworth"
+    "pwadsworth",
+    "meatball133"
   ]
 }
