--- a/exercises/concept/pacman-rules/.meta/config.json
+++ b/exercises/concept/pacman-rules/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "pwadsworth"
   ],
+  "contributors": 
+    ["meatball133"]
+  ,
   "files": {
     "solution": [
       "src/PacmanRules.hs",
